fixed row issue ads align properly

--- a/public/adwall.css
+++ b/public/adwall.css
@@ -52,6 +52,8 @@ h1 {
 .ad-form-container{
     margin-left: auto;
     margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
     width: 500px;
 }
 
